// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`differentialExpressionReducer Sets error state on error action 1`] = `
Object {
  "comparison": Object {
    "advancedFilters": Array [],
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "ordering": Object {
      "orderBy": "logFC",
      "orderDirection": "DESC",
    },
    "type": "within",
  },
  "properties": Object {
    "comparisonGroup": Object {},
    "comparisonType": null,
    "data": Array [],
    "error": "asd",
    "loading": false,
    "total": 0,
  },
}
`;

exports[`differentialExpressionReducer Sets loaded state on loaded action 1`] = `
Object {
  "comparison": Object {
    "advancedFilters": Array [],
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "ordering": Object {
      "orderBy": "logFC",
      "orderDirection": "DESC",
    },
    "type": "within",
  },
  "properties": Object {
    "comparisonGroup": undefined,
    "comparisonType": undefined,
    "data": Array [
      Object {
        "gene_names": "A",
        "logFC": 3.45,
        "p_val": 1.16,
        "p_val_adj": 2.16,
      },
      Object {
        "gene_names": "B",
        "logFC": 4.45,
        "p_val": 2.16,
        "p_val_adj": 3.16,
      },
      Object {
        "gene_names": "C",
        "logFC": 5.45,
        "p_val": 3.16,
        "p_val_adj": 4.16,
      },
      Object {
        "gene_names": "D",
        "logFC": 6.45,
        "p_val": 4.16,
        "p_val_adj": 5.16,
      },
      Object {
        "gene_names": "E",
        "logFC": 7.45,
        "p_val": 5.16,
        "p_val_adj": 6.16,
      },
      Object {
        "gene_names": "F",
        "logFC": 8.45,
        "p_val": 6.16,
        "p_val_adj": 7.16,
      },
    ],
    "error": false,
    "loading": false,
    "total": 6,
  },
}
`;

exports[`differentialExpressionReducer Sets loading state on loading action 1`] = `
Object {
  "comparison": Object {
    "advancedFilters": Array [
      Object {
        "columnName": "foo",
        "columnValue": "bar",
      },
    ],
    "group": Object {
      "between": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
      "within": Object {
        "basis": null,
        "cellSet": null,
        "compareWith": null,
      },
    },
    "ordering": Object {
      "orderBy": "logFC",
      "orderDirection": "DESC",
    },
    "type": "within",
  },
  "properties": Object {
    "comparisonGroup": Object {},
    "comparisonType": null,
    "data": Array [],
    "error": false,
    "loading": true,
    "total": 0,
  },
}
`;
